--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "scripts": {
     "dev": "fis3 release -wL",
-    "test": "rm -rf ./fis-dist && fis3 release local && workbox generate:sw && cross-env NODE_ENV=test node deploy",
-    "build": "rm -rf ./fis-dist && fis3 release local && workbox generate:sw && cross-env NODE_ENV=production node deploy"
+    "test": "rimraf ./fis-dist && fis3 release local && workbox generate:sw && cross-env NODE_ENV=test node deploy",
+    "build": "rimraf ./fis-dist && fis3 release local && workbox generate:sw && cross-env NODE_ENV=production node deploy"
   },
   "dependencies": {
     "axios": "^0.17.1",
@@ -39,6 +39,7 @@
     "fis3-preprocessor-js-require-css": "^0.1.1",
     "fis3-preprocessor-js-require-file": "^0.1.3",
     "node-sftp-deploy-i": "^1.0.41",
+    "rimraf": "^2.6.2",
     "workbox-cli": "^2.1.3"
   }
 }
