--- a/package.json
+++ b/package.json
@@ -3,16 +3,17 @@
   "version": "1.0.0",
   "scripts": {
     "dev": "fis3 release -wL",
-    "test": "rimraf ./fis-dist && fis3 release local && workbox generate:sw && cross-env NODE_ENV=test node deploy",
-    "build": "rimraf ./fis-dist && fis3 release local && workbox generate:sw && cross-env NODE_ENV=production node deploy"
+    "test": "rimraf ./fis-dist && fis3 release local && workbox generate:sw && node deploy test",
+    "build": "rimraf ./fis-dist && fis3 release local && workbox generate:sw && node deploy production"
   },
   "dependencies": {
     "axios": "^0.17.1",
     "element-ui": "^2.0.11",
     "lodash.debounce": "^4.0.8",
+    "store": "^2.0.12",
     "vue": "^2.5.13",
     "vue-loading-template": "^0.1.7",
-    "vue-resource": "^1.3.5",
+    "vue-moment": "^3.2.0",
     "vue-router": "^3.0.1",
     "vue-swipe": "^2.3.0"
   },
